# lyx

./: .gitignore  ANNOUNCE  CMakeLists.txt  INSTALL  INSTALL.MacOSX  INSTALL.Win32  INSTALL.autoconf  INSTALL.cmake  NEWS  README  README.localization  TODO.killqt4  autogen.sh  configure.ac  lyx.1in  status.24x
config/: Makefile.am  lyxinclude.m4  qt.m4
development/: FORMAT  LyX-Mac-binary-release.sh  PAINTING_ANALYSIS  coverity_modeling.cpp
lib/: CREDITS  Makefile.am  RELEASE-NOTES  chkconfig.ltx  configure.py  generate_contributions.py  languages  latexcolors  latexfonts  layouttranslations  layouttranslations.review  math_conflicts  org.lyx.LyX.metainfo.xml  pyproject.toml  symbols  syntax.default  unicode_alphanum_variants  (+1 more)
src/: AspellChecker.cpp  Author.h  BiblioInfo.cpp  BiblioInfo.h  Box.h  BranchList.cpp  BranchList.h  Buffer.cpp  Buffer.h  BufferEncodings.h  BufferList.cpp  BufferList.h  BufferParams.cpp  BufferParams.h  BufferView.cpp  BufferView.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Changes.h  Citation.h  CiteEnginesList.cpp  CmdDef.cpp  CmdDef.h  Color.cpp  Color.h  ColorCode.h  ColorSet.h  Compare.cpp  Converter.cpp  Converter.h  ConverterCache.cpp  ConverterCache.h  CoordCache.cpp  CoordCache.h  Counters.cpp  Counters.h  Cursor.cpp  Cursor.h  CursorSlice.cpp  (+116 more)
src/client/: CMakeLists.txt  Makefile.am  boost.cpp  client.cpp
src/convert/: lyxconvert.cpp
src/frontends/: Application.h  CMakeLists.txt  Clipboard.h  Delegates.h  FontLoader.h  FontMetrics.h  InputMethod.h  KeySymbol.h  Makefile.am  NullPainter.h  Painter.h  Selection.h  WorkArea.h  WorkAreaManager.cpp  WorkAreaManager.h  alert.h
src/frontends/qt/: Action.cpp  Action.h  BulletsModule.cpp  BulletsModule.h  ButtonController.cpp  CMakeLists.txt  CategorizedCombo.cpp  CategorizedCombo.h  ColorCache.cpp  ColorCache.h  ColorListWidget.cpp  ColorListWidget.h  ColorsCombo.cpp  ColorsCombo.h  CustomizedWidgets.cpp  CustomizedWidgets.h  Dialog.cpp  Dialog.h  DialogFactory.cpp  DockView.cpp  EmptyTable.cpp  FancyLineEdit.cpp  FancyLineEdit.h  FileDialog.cpp  FindAndReplace.cpp  FindAndReplace.h  FloatPlacement.cpp  GuiAbout.cpp  GuiAbout.h  GuiAlert.cpp  GuiApplication.cpp  GuiApplication.h  GuiBibitem.cpp  GuiBibtex.cpp  GuiBibtex.h  GuiBox.cpp  GuiBox.h  GuiBranch.cpp  GuiBranches.cpp  GuiChanges.cpp  (+111 more)
src/frontends/qt/ui/: AboutUi.ui  BibitemUi.ui  BiblioUi.ui  BibtexUi.ui  BoxUi.ui  BranchesUi.ui  BulletsUi.ui  CharacterUi.ui  ColorUi.ui  CompareUi.ui  DelimiterUi.ui  ExternalUi.ui  FindAndReplaceUi.ui  FloatPlacementUi.ui  FontUi.ui  GraphicsUi.ui  HSpaceUi.ui  HyperlinkUi.ui  IncludeUi.ui  IndicesUi.ui  LaTeXUi.ui  LanguageUi.ui  LineUi.ui  ListingsUi.ui  LocalLayoutUi.ui  LyXFilesUi.ui  MarginsUi.ui  MathMatrixUi.ui  MathsUi.ui  NomenclUi.ui  NumberingUi.ui  OutputUi.ui  PDFSupportUi.ui  PageLayoutUi.ui  ParagraphUi.ui  PreambleUi.ui  PrefColorsUi.ui  PrefConvertersUi.ui  PrefDisplayUi.ui  PrefEditUi.ui  (+21 more)
src/frontends/tests/: CMakeLists.txt
src/graphics/: CMakeLists.txt  GraphicsCacheItem.cpp  GraphicsConverter.cpp  GraphicsImage.h  GraphicsTypes.h  PreviewImage.cpp  PreviewImage.h  PreviewLoader.cpp  PreviewLoader.h
src/insets/: CMakeLists.txt  ExternalSupport.cpp  ExternalTemplate.cpp  ExternalTemplate.h  ExternalTransforms.h  Inset.cpp  Inset.h  InsetArgument.cpp  InsetArgument.h  InsetBibitem.cpp  InsetBibitem.h  InsetBibtex.cpp  InsetBox.cpp  InsetBox.h  InsetBranch.cpp  InsetBranch.h  InsetCaption.cpp  InsetCaption.h  InsetCaptionable.cpp  InsetCaptionable.h  InsetCitation.cpp  InsetCitation.h  InsetCode.h  InsetCollapsible.cpp  InsetCollapsible.h  InsetCommand.cpp  InsetCommand.h  InsetCommandParams.cpp  InsetCommandParams.h  InsetCounter.cpp  InsetCounter.h  InsetERT.cpp  InsetExternal.cpp  InsetExternal.h  InsetFlex.cpp  InsetFloat.cpp  InsetFloat.h  InsetFloatList.cpp  InsetFloatList.h  InsetFoot.cpp  (+65 more)
src/mathed/: CMakeLists.txt  InsetMath.cpp  InsetMath.h  InsetMathAMSArray.cpp  InsetMathAMSArray.h  InsetMathArray.cpp  InsetMathArray.h  InsetMathBig.cpp  InsetMathBig.h  InsetMathBoldSymbol.cpp  InsetMathBoldSymbol.h  InsetMathBox.cpp  InsetMathBox.h  InsetMathBrace.cpp  InsetMathBrace.h  InsetMathCancel.cpp  InsetMathCancel.h  InsetMathCancelto.cpp  InsetMathCancelto.h  InsetMathCases.cpp  InsetMathCases.h  InsetMathChar.cpp  InsetMathChar.h  InsetMathClass.cpp  InsetMathClass.h  InsetMathColor.cpp  InsetMathColor.h  InsetMathCommand.cpp  InsetMathCommand.h  InsetMathComment.cpp  InsetMathComment.h  InsetMathDecoration.cpp  InsetMathDecoration.h  InsetMathDelim.cpp  InsetMathDelim.h  InsetMathDiagram.cpp  InsetMathDiagram.h  InsetMathDiff.cpp  InsetMathDiff.h  InsetMathDots.cpp  (+103 more)
src/support/: CMakeLists.txt  Changer.h  ConsoleApplication.h  ConsoleApplicationPrivate.h  FileMonitor.cpp  FileMonitor.h  FileName.cpp  FileName.h  ForkedCalls.cpp  ForkedCalls.h  Length.cpp  Length.h  Lexer.cpp  Lexer.h  Makefile.am  Messages.cpp  Messages.h  Package.h  PathChanger.cpp  ProgressInterface.h  Systemcall.cpp  Systemcall.h  bind.h  convert.cpp  convert.h  counter_reps.h  debug.h  docstream.cpp  docstring.cpp  docstring.h  filetools.cpp  filetools.h  gettext.cpp  gettext.h  gzstream.cpp  lassert.cpp  lassert.h  lstrings.cpp  lstrings.h  lyxtime.cpp  (+16 more)
src/support/tests/: CMakeLists.txt  check_trivstring.cpp  dummy_functions.cpp
src/tests/: CMakeLists.txt  boost.cpp  check_layout.cpp  dummy4checklayout.cpp  dummy_functions.cpp
src/tex2lyx/: CMakeLists.txt  Context.h  Makefile.am  Parser.cpp  Parser.h  Preamble.cpp  Preamble.h  boost.cpp  dummy_impl.cpp  table.cpp  tex2lyx.cpp  tex2lyx.h  text.cpp
src/tex2lyx/test/: CJK.lyx.lyx  CJKutf8.lyx.lyx  CMakeLists.txt  DummyDocument.lyx.lyx  Dummy~Document.lyx.lyx  XeTeX-polyglossia.lyx.lyx  algo2e.lyx.lyx  beamer.lyx.lyx  box-color-size-space-align.lyx.lyx  listpreamble.lyx.lyx  runtests.cmake  runtests.py  tabular-x-test.lyx.lyx  test-insets-basic.lyx.lyx  test-insets.lyx.lyx  test-memoir.lyx.lyx  test-minted.lyx.lyx  test-modules.lyx.lyx  test-refstyle-theorems.lyx.lyx  test-scr.lyx.lyx  test-structure.lyx.lyx  test.lyx.lyx  verbatim.lyx.lyx
(+1304 files in other folders)
